# mandelvr

./: .gitmodules  CMakeLists.txt  lab09.sln
resources/: IQ_juliabulb_derivative.fs  IQ_mandelbulb_derivative.fs  ccsphere.fs  ccsphere.vs  companion_view.fs  frag_nolight.glsl  old_map_function.glsl  passthru.fs  passthru.vs  showspace.fs  simple_frag.glsl  simple_vert.glsl  vert.glsl  voxel_mandelbulb.cs
src/: ComputeShader.cpp  ComputeShader.h  FileUtils.cpp  FileUtils.h  MandelRenderer.cpp  MandelRenderer.h  MandelSkybox.h  MarchingLayer.cpp  MarchingLayer.h  MarchingManager.cpp  MarchingManager.h  Program.cpp  Program.h  Shape.cpp  VRplayer.cpp  VRplayer.hpp  WindowManager.cpp  WindowManager.h  camera.h  directions.h  imgui_impl_glfw_gl3.cpp  imgui_impl_glfw_gl3.h  lab09.vcxproj  lab09.vcxproj.filters  main.cpp
